package iuh.decorator;

public interface Product {

    double getPrice();

    String getDescription();

}
